add cart, update templates

--- a/shop/templates/shop/_partials/_navbar.html
+++ b/shop/templates/shop/_partials/_navbar.html
@@ -6,7 +6,7 @@
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <form action="{% url 'shop:search-products' %}" method="get">
+        <form action="{% url 'shop:search_products' %}" method="get">
             <div class="mx-auto my-3 d-lg-none d-sm-block d-xs-block">
             <div class="input-group">
                 <span class="border-success input-group-text bg-success text-white"><i
@@ -17,7 +17,7 @@
         </div>
     </form>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <form action="{% url 'shop:search-products' %}" method="get">
+            <form action="{% url 'shop:search_products' %}" method="get">
             <div class="ms-auto d-none d-lg-block">
                 <div class="input-group">
                     <span class="border-success input-group-text text-white search-button"><i
@@ -78,7 +78,7 @@
             </ul>
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link mx-2 text-uppercase" href="{% url 'cart:cart-view' %}"> <i
+                    <a class="nav-link mx-2 text-uppercase" href="{% url 'cart:cart_view' %}"> <i
                             class="fa fa-shopping-cart" aria-hidden="true"> </i> Cart
                         <span id="lblCartCount" class="badge badge-warning ">
 
